plugins {
    id "java"
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8

group "meteordevelopment"
version "0.1.0"
